完成第五章的学习