@@ -11,6 +11,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 public class BookValidationTests {
     private static Validator validator;
@@ -19,37 +20,38 @@ public class BookValidationTests {
         ValidatorFactory factory = Validation.buildDefaultValidatorFactory();
         validator = factory.getValidator();
     }
+
     @Test
-    void whenAllFieldsCorrectThenValidationSucceeds(){
-        var book = new Book("1234567890", "Title", "Author", 9.90);
+    void whenAllFieldsCorrectThenValidationSucceeds() {
+        var book = Book.of("1234567890", "Title", "Author", 9.90, "Polarsophia");
         Set<ConstraintViolation<Book>> violations = validator.validate(book);
         assertThat(violations).isEmpty();
     }
 
     @Test
     void whenIsbnNotDefinedThenValidationFails() {
-        var book = new Book("", "Title", "Author", 9.90);
+        var book = Book.of("", "Title", "Author", 9.90, "Polarsophia");
         Set<ConstraintViolation<Book>> violations = validator.validate(book);
         assertThat(violations).hasSize(2);
         List<String> constraintViolationMessages = violations.stream()
-                .map(ConstraintViolation::getMessage).toList();
+                .map(ConstraintViolation::getMessage).collect(Collectors.toList());
         assertThat(constraintViolationMessages)
                 .contains("The book ISBN must be defined.")
-                .contains("The ISBN format must be valid.");
+				.contains("The ISBN format must be valid.");
     }
 
     @Test
     void whenIsbnDefinedButIncorrectThenValidationFails() {
-        var book = new Book("a234567890", "Title", "Author", 9.90);
+        var book = Book.of("a234567890", "Title", "Author", 9.90, "Polarsophia");
         Set<ConstraintViolation<Book>> violations = validator.validate(book);
         assertThat(violations).hasSize(1);
         assertThat(violations.iterator().next().getMessage())
-                .isEqualTo("The ISBN format must be valid.");
+				.isEqualTo("The ISBN format must be valid.");
     }
 
     @Test
     void whenTitleIsNotDefinedThenValidationFails() {
-        var book = new Book("1234567890", "", "Author", 9.90);
+        var book = Book.of("1234567890", "", "Author", 9.90, "Polarsophia");
         Set<ConstraintViolation<Book>> violations = validator.validate(book);
         assertThat(violations).hasSize(1);
         assertThat(violations.iterator().next().getMessage())
@@ -58,7 +60,7 @@ public class BookValidationTests {
 
     @Test
     void whenAuthorIsNotDefinedThenValidationFails() {
-        var book = new Book("1234567890", "Title", "", 9.90);
+        var book = Book.of("1234567890", "Title", "", 9.90, "Polarsophia");
         Set<ConstraintViolation<Book>> violations = validator.validate(book);
         assertThat(violations).hasSize(1);
         assertThat(violations.iterator().next().getMessage())
@@ -67,7 +69,7 @@ public class BookValidationTests {
 
     @Test
     void whenPriceIsNotDefinedThenValidationFails() {
-        var book = new Book("1234567890", "Title", "Author", null);
+        var book = Book.of("1234567890", "Title", "Author", null, "Polarsophia");
         Set<ConstraintViolation<Book>> violations = validator.validate(book);
         assertThat(violations).hasSize(1);
         assertThat(violations.iterator().next().getMessage())
@@ -76,7 +78,7 @@ public class BookValidationTests {
 
     @Test
     void whenPriceDefinedButZeroThenValidationFails() {
-        var book = new Book("1234567890", "Title", "Author", 0.0);
+        var book = Book.of("1234567890", "Title", "Author", 0.0, "Polarsophia");
         Set<ConstraintViolation<Book>> violations = validator.validate(book);
         assertThat(violations).hasSize(1);
         assertThat(violations.iterator().next().getMessage())
@@ -85,10 +87,18 @@ public class BookValidationTests {
 
     @Test
     void whenPriceDefinedButNegativeThenValidationFails() {
-        var book = new Book("1234567890", "Title", "Author", -9.90);
+        var book = Book.of("1234567890", "Title", "Author", -9.90, "Polarsophia");
         Set<ConstraintViolation<Book>> violations = validator.validate(book);
         assertThat(violations).hasSize(1);
         assertThat(violations.iterator().next().getMessage())
                 .isEqualTo("The book price must be greater than zero.");
     }
+
+    @Test
+    void whenPublisherIsNotDefinedThenValidationSucceeds() {
+        Book book = Book.of("1234567890", "Title", "Author", 9.90,null);
+        Set<ConstraintViolation<Book>> violations = validator.validate(book);
+        assertThat(violations).isEmpty();
+    }
+
 }
